--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
     "lint-staged": "^9.4.3",
     "npm-run-all": "^4.1.5",
     "prettier-eslint-cli": "^5.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.12.0 || 17",
+    "react-dom": "^16.12.0 || 17",
     "react-intl": "^3.6.0",
     "react-redux": "^7.1.3",
-    "react-test-renderer": "^16.12.0",
+    "react-test-renderer": "^16.12.0 || 17",
     "redux": "^4.0.4",
     "redux-immutable": "^4.0.0"
   },
