--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:ava": "jest"
   },
   "peerDependencies": {
-    "react-intl": "^2.2.2 || ^3.0.0",
+    "react-intl": "^2.2.2 || ^3.0.0 || ^5.20.4",
     "react-redux": "^5.0.1 || ^6.0.0 || ^7.0.0"
   },
   "dependencies": {
